<resources>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Do not have an account?</string>
    <string name="email_and_password_fields_are_empty">Email and password fields are empty</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="registration_are_successful">Registration are successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="user_in_the_system">User in the System</string>
    <string name="user_not_registered_please_register">"User not registered, please register"</string>
    <string name="error_occurred">Error occurred</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="invalid_password">Invalid password</string>
    <string name="no_internet">No internet</string>
    <string name="fields_can_not_be_empty">Fields can not be empty</string>
    <string name="all_fields_must_be_completed">All fields must be completed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="welcome">Welcome!</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">repeat password</string>
    <string name="create_account">Create account</string>

</resources>