<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/auth_container"
    android:background="@color/background">

    <TextView
        android:id="@+id/welcomeTitle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_top_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/InputNameLayout"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:hintTextColor="@color/black"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        app:layout_constraintWidth_percent="@dimen/width_percent_"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size"
            android:hint="@string/email"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:hintTextColor="@color/black"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InputNameLayout"
        app:layout_constraintWidth_percent="@dimen/width_percent_"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/horizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InputPasswordLayout"
        app:layout_constraintVertical_bias="@dimen/vertical_bias_sign_in"
        app:layout_constraintWidth_percent="@dimen/width_percent_" />

    <TextView
        android:id="@+id/accaunt"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        app:layout_constraintVertical_bias="@dimen/vertical_bias_"
        app:layout_constraintWidth_percent="@dimen/width_percent_accaunt"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accaunt"
        app:layout_constraintVertical_bias="@dimen/vertical_bias"
        app:layout_constraintWidth_percent="@dimen/width_percent_" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/cpb_auth"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>
